--- a/columnistas.html
+++ b/columnistas.html
@@ -2,67 +2,429 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">						
-  	<link rel="stylesheet" href="css/font-awesome.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-	<script src="js/bootstrap.min.js"> </script>
-	<script src="js/tagcanvas.min.js" type="text/javascript"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- para que funcione el codigo a escala -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/columnistas.css">
 	<title>Conlumnistas</title>
 </head>
 <body>
-	<div class="section">
-		<div class="container">
-			<div class="row">
-				<h2>Columnistas</h2>
-				<p class="seccion">Lo último en columnistas <span><img src="image/double-arrow-bottom.png" alt=""></span></p>
+	<div class="container-fluid">	
+		<div class="row ">	
+			<div class="col-xs-2"> <!-- PUBLICIDADDDDDDDDDD -->	
+				<img class="fit" src="image/banner1.png" alt="">
 			</div>
-			<div class="row">
-				<div class="col-xs-16">
-					<div class="col-xs-5">
-						<div class="columnista text-center">
-							<p class="fecha">lunes, 14 de Julio de 2015</p>
-							<p class="titulo">El gol de la muerte</p>
-							<div class="marco">
-								<div class="row">
-									<div class="col-xs-4 pd-0">
-										<img class="pic" src="image/img_author_columnista.jpg" alt="">
+			<div class="col-lg-12 col-xs-12">
+			<article>
+				<section>
+					<div class="row">
+						<h2><strong>Columnistas</strong></h2>
+						<p class="seccion hidden-sm hidden-xs">Lo último en columnistas <span><img src="image/double-arrow-bottom.png" alt=""></span></p>
+					</div>
+					<div class="row pl-5">
+						<div class="col-16-lg hidden-sm hidden-xs pd-0">
+							<div class="columnista text-center">
+								<p class="fecha">lunes, 14 de Julio de 2015</p>
+								<p class="titulo">El gol de la muerte</p>
+								<div class="marco">
+									<div class="row">
+										<div class="col-md-4 pd-0">
+											<img class="pic" src="image/img_author_columnista.jpg" alt="">
+										</div>
+										<div class="col-md-12">	
+											<p class="nombre">Chucho Benitez</p>
+											<p class="breve">Claro y directo</p>
+										</div>
 									</div>
-									<div class="col-xs-12 pd-0">	
-										<p class="nombre pd-0">Chucho Benitez</p>
-										<p class="breve pd-0">Claro y directo</p>
+								</div>
+							</div>
+							<div class="columnista text-center">
+								<p class="fecha">lunes, 14 de Julio de 2015</p>
+								<p class="titulo">El gol de la muerte</p>
+								<div class="marco">
+									<div class="row">
+										<div class="col-md-4 pd-0">
+											<img class="pic" src="image/img_author_columnista.jpg" alt="">
+										</div>
+										<div class="col-md-12">	
+											<p class="nombre">Chucho Benitez</p>
+											<p class="breve">Claro y directo</p>
+										</div>
+									</div>
+								</div>
+							</div>	
+							<div class="columnista text-center">
+								<p class="fecha">lunes, 14 de Julio de 2015</p>
+								<p class="titulo">El gol de la muerte</p>
+								<div class="marco">
+									<div class="row">
+										<div class="col-md-4 pd-0">
+											<img class="pic" src="image/img_author_columnista.jpg" alt="">
+										</div>
+										<div class="col-md-12">	
+											<p class="nombre">Chucho Benitez</p>
+											<p class="breve">Claro y directo</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="columnista text-center">
+								<p class="fecha">lunes, 14 de Julio de 2015</p>
+								<p class="titulo">El gol de la muerte</p>
+								<div class="marco">
+									<div class="row">
+										<div class="col-md-4 pd-0">
+											<img class="pic" src="image/img_author_columnista.jpg" alt="">
+										</div>
+										<div class="col-md-12">	
+											<p class="nombre">Chucho Benitez</p>
+											<p class="breve">Claro y directo</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="columnista text-center">
+								<p class="fecha">lunes, 14 de Julio de 2015</p>
+								<p class="titulo">El gol de la muerte</p>
+								<div class="marco">
+									<div class="row">
+										<div class="col-md-4 pd-0">
+											<img class="pic" src="image/img_author_columnista.jpg" alt="">
+										</div>
+										<div class="col-md-12">	
+											<p class="nombre">Chucho Benitez</p>
+											<p class="breve">Claro y directo</p>
+										</div>
+									</div>
+								</div>
+							</div>	
+							<div class="columnista text-center">
+								<p class="fecha">lunes, 14 de Julio de 2015</p>
+								<p class="titulo">El gol de la muerte</p>
+								<div class="marco">
+									<div class="row">
+										<div class="col-md-4 pd-0">
+											<img class="pic" src="image/img_author_columnista.jpg" alt="">
+										</div>
+										<div class="col-md-12">	
+											<p class="nombre">Chucho Benitez</p>
+											<p class="breve">Claro y directo</p>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>	
 					</div>
-				</div>
-				<div class="col-xs-16">
-					<div class="col-xs-5">
-						<div class="columnista text-center">
-							<p class="fecha">lunes, 14 de Julio de 2015</p>
-							<p class="titulo">El gol de la muerte</p>
+					</section>
+					<section>
+					<div class="row">	
+						<div class="col-xs-16 text-center">	
+							<button class="btn	botonrojo">TODAS LAS COLUMNAS</button>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-16 col-lg-16">	
+							<p class="seccion">Todos los columnistas <span><img src="image/double-arrow-bottom.png" alt=""></span></p>
+						</div>
+					</div>
+					<div class="row">	
+						<nav>
+							<div class="nav-abc"> <!-- ESTE NAV CON BOOTSTRAP COMPLETO SE HARIA CON PILLS Y TABS -->
+								<ul>
+									<li><a id="atencion" href="">TODOS</a></li>
+									<li><a href="">ABC</a></li>
+									<li><a href="">DEF</a></li>
+									<li><a href="">GHI</a></li>
+									<li><a href="">JKL</a></li>
+									<li><a href="">MNO</a></li>
+									<li><a href="">PQRS</a></li>
+									<li><a href="">TUV</a></li>
+									<li><a href="">WXYZ</a></li>
+								</ul>
+								
+							</div>
+						</nav>
+					</div>
+					<div class="row todos">  <!-- PRIMERA ROW DE IMAGENES DE AUTORES -->	<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
 							<div class="marco">
 								<div class="row">
-									<div class="col-xs-4">
-										<img class="pic" src="image/img_author_columnista.jpg" alt="">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
 									</div>
-									<div class="col-xs-12">	
-										<p class="nombre">Chucho Benitez</p>
-										<p class="breve ">Claro y directo</p>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
 									</div>
 								</div>
 							</div>
-						</div>	
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
-				</div>
+					<div class="row todos">  <!-- SEGUNDA ROW DE IMAGENES DE AUTORES -->
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row todos">  <!-- TERCERA ROW DE IMAGENES DE AUTORES -->
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row todos">  <!-- CUARTA ROW DE IMAGENES DE AUTORES -->	
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row todos">  <!-- QUINTA ROW DE IMAGENES DE AUTORES -->	
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-8 col-sm-8 col-xs-16">	
+							<div class="marco">
+								<div class="row">
+									<div class="col-md-4 pd-0">
+										<img class="pic" src="image/img-columnistas.jpg" alt="">
+									</div>
+									<div class="col-md-12">	
+										<p class="nombre">Francisco Durand</p>
+										<p class="breve">Tiro al blanco</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+			</article>
+			</div> <!-- CIERRA col-12 -->
+			<div class="col-xs-2"> <!-- PUBLICIDADDDDDDDDDD -->	
+				<img class="fit" src="image/banner2.png" alt="">
 			</div>
-
-		</div>
-	</div>
+		</div><!-- CIERRA ROW -->
+	</div> <!-- CIERRA CONTAINER GRAL -->
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+	<script src="js/bootstrap.min.js"> </script>
+	<script src="js/tagcanvas.min.js" type="text/javascript"></script>
 </body>
 </html>
