link de columnistas

--- a/index.html
+++ b/index.html
@@ -73,96 +73,96 @@
 							<div class="row "><!-- renglon para fotos -->
 								<div class="col-md-16"><!-- espacio carusel-->
 									<div class=" responsive text-center">
-									    <div class="">
+									    <a class="negro" href="columnistas.html"><div class="">
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_noticias_relacionadas_slider.jpg" alt="foto1">
 									    	<small>Mario Vargas Llosa</small>
 									    	<p class="fuerte">Megarrenuncia apulpinante</p>
-									    </div>
-									    <div>
+									    </div></a>
+									    <a class="negro" href="columnistas.html"><div>
 									    	<img class="col" src="image/img_blogueros.jpg" alt="foto2">
 									    	<small>Agusto Alvarez Rodrich</small>
 									    	<p class="fuerte">Respuesta a una derrota estridente</p>
-									    </div>
+									    </div></a>
 
 									 </div>
 								</div><!-- fin de carruseñ -->
